--- a/resources/leiningen/new/shadow_cljs/package.json
+++ b/resources/leiningen/new/shadow_cljs/package.json
@@ -1,16 +1,15 @@
 {
   "scripts": {
-    "deps": "yarn install; shadow-cljs npm-deps;",
+    "deps": "yarn install",
     "watch": "shadow-cljs watch app;",
     "release": "shadow-cljs release app;",
     "server": "shadow-cljs server;",
     "clean": "rm -rf target; rm -rf public/js/compiled"
   },
   "dependencies": {
-    "@cljs-oss/module-deps": "^1.1.1",
     "create-react-class": "^15.6.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "shadow-cljs": "2.0.77"
+    "shadow-cljs": "^2.0.80"
   }
 }
